feat(java-12): add JMH feature and JVM changes